Fixed Image distortion & CSS

--- a/src/feedback.css
+++ b/src/feedback.css
@@ -111,7 +111,9 @@
 }
 #feedback-overview {
   display: none;
-
+  //top: 10%;
+  //left: 50%;
+  //margin-left: -420px;
   position: fixed;
   width: 80%!important;
   max-width: 840px!important;
@@ -121,16 +123,13 @@
 #feedback-submit-loading,
 #feedback-submit-success {
   top: 30%;
+  //left: 50%;
+  //margin-left: -300px;
   display: block;
   position: fixed;
   max-width: 600px;
   width: 80%;
   height: auto;
-}
-
-#feedback-submit-error{
-  border-bottom-right-radius: 30px;
-  border-top-right-radius: 30px;
 }
 .feedback-btn {
   padding: 10px;
@@ -187,7 +186,6 @@
   z-index: 40000;
   background: #fff;
   border-radius: 5px;
-  border-bottom-right-radius: 50px;
   border: 1px solid rgba(0,0,0,.333);
   padding: 30px 42px;
   max-width: 540px;
@@ -289,10 +287,22 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+@media (max-width: 500px){
+  #feedback-highlighter {
+    height: 450px;
+  }
+  #feedback-overview {
+    height: 530px;
+  }
+  #feedback-overview-note {
+    width: 210px;
+  }
+}
 #feedback-highlighter label.lower {  margin-top: 10px }
 .feedback-buttons {
   float: right;
-  margin-top: 10px;
+  margin-top: 20px;
   clear: both;
 }
 #feedback-module h3 {
@@ -303,22 +313,22 @@
 .feedback-additional {  margin-bottom: 20px!important }
 #feedback-overview-description {  float: left }
 #feedback-overview-note {
-  width: 340px;
+  width: 240px;
   height: 200px;
-  padding: 5px;
-  border-radius: 5px;  
+  padding: 4px;
+  border-radius: 5px;
+  height: 90px;
   outline: none;
   font-family: Arial,sans-serif;
+  border: 1px solid #adadad;
 }
 #feedback-overview-screenshot {  float: right }
 .feedback-screenshot {
   max-width: 396px;
-  padding: 5px;
+  padding: 1px;
   border: 1px solid #adadad;
   width: 100%;
-  height: auto;
-  border-radius: 5px;
-  box-shadow: 5px 5px 5px #0003;
+  height: 200px;
 }
 #feedback-overview-description-text span {
   font-size: 14px;
